--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.15",
+    "axios": "^1.8.4",
     "flowbite": "^3.1.2",
     "formik": "^2.4.6",
     "react": "^19.0.0",
